# Percolation-Theory-Simulation

./: .gitgnore  CMakeLists.txt  Dockerfile  README.md  UF.cpp  UF.hpp  docker-compose.yml  environment.yml  main  main.py  requirements.txt  test.py
_skbuild/macosx-12.0-x86_64-3.9/cmake-build/: CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake
app/: app.py
app/routers/: data_source.py  dataset.py  simulation.py
app/services/: data_source.py  dataset.py  monte_carlo.py  test.py
app/services/cpp/: MonteCarlo.cpp  MonteCarlo.h  Percolation.cpp  Percolation.h  UF.cpp  UF.h  UF.hpp  UnionFind.cpp  UnionFind.h  WeightedQuickUnionUF.cpp  WeightedQuickUnionUF.h  WeightedUF.cpp  WeightedUF.h  main  main.cpp  test.py  wrap.cpp
